002 - Criação de componentes dinamicos

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,12 +5,25 @@
 <app-menu-title></app-menu-title>
 <div class="container__articles">
   <div class="articles__main">
-    <app-big-card></app-big-card>
+    <app-big-card
+      photoCover="http://www.petadm.ufc.br/wp-content/uploads/2020/10/MOANA-2.jpg"
+      cardTitle="Aspectos de liderança presentes no filme Moana – Um Mar de Aventuras"
+      cardDescripition="Se você não conhece “Moana, um mar de aventuras”, é uma animação dos estúdios Walt Disney Pictures, totalmente diferente do que estamos acostumados a ver quando se trata de um filme da companhia."
+    ></app-big-card>
   </div>
 <div class="articles">
   <div class="articles__others">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+    <app-small-card
+      photoCover="https://recreio.uol.com.br/media/_versions/disney/dia_do_stitch_capa_widelg.jpg"
+      cardTitle="Por que hoje é comemorado o Dia do Stitch?"
+    ></app-small-card>
+    <app-small-card
+    photoCover="https://www.melhoresdestinos.com.br/wp-content/uploads/2022/11/disney-aumenta-precos-ingressos-orlando-1-1536x805.jpeg"
+    cardTitle="Má notícia! Disney vai aumentar preços de ingressos"
+    ></app-small-card>
+    <app-small-card
+    photoCover="https://assets.papelpop.com/wp-content/uploads/2020/02/0_5DEcZJ__cH3ansKS.jpg"
+    cardTitle="Disney está desenvolvendo live-action de Rapunzel"
+    ></app-small-card>
   </div>
 </div>
