--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,6 +1,6 @@
 <div class="container__menu-bar">
   <ul>
-    <li><a href="www.linkedin.com/in/pamela-karina-canale-ab4a4465">Linkedin</a></li>
+    <li><a href="https://linkedin.com/in/pamela-karina-canale-ab4a4465">Linkedin</a></li>
     <li><span>•</span></li>
     <li><a href="https://github.com/Pannhkarina">Github</a></li>
     <li><span>•</span></li>
