--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -2,12 +2,12 @@
   <div class="container__small-card-content">
     <div class="small-card__photo">
       <img
-        src="https://recreio.uol.com.br/media/_versions/disney/dia_do_stitch_capa_widelg.jpg"
+        src="{{photoCover}}"
         alt=""
         srcset="">
     </div>
     <div class="small-card__title">
-        <h1><a href="#">Por que hoje é comemorado o Dia do Stitch?</a></h1>
+        <h1><a href="#">{{cardTitle}}</a></h1>
     </div>
   </div>
 
