--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -7,10 +7,10 @@
         srcset="">
     </div>
     <div class="big-card__title">
-        <h1><a href="#">{{ cardTitle }}</a></h1>
+        <h1><a [routerLink]="['content', Id]">{{ cardTitle }}</a></h1>
     </div>
     <div class="big-card__description">
-      <p><a href="#">{{ cardDescripition }}</a></p>
+      <p><a [routerLink]="['content', Id]">{{ cardDescripition }}</a></p>
     </div>
 
 </div>
